@@ -37,6 +37,34 @@ name|org
 operator|.
 name|apache
 operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|Log
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|LogFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|hadoop
 operator|.
 name|hive
@@ -341,6 +369,20 @@ name|LongWritable
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|util
+operator|.
+name|StringUtils
+import|;
+end_import
+
 begin_class
 annotation|@
 name|description
@@ -359,6 +401,23 @@ name|GenericUDAFAverage
 implements|implements
 name|GenericUDAFResolver
 block|{
+specifier|static
+specifier|final
+name|Log
+name|LOG
+init|=
+name|LogFactory
+operator|.
+name|getLog
+argument_list|(
+name|GenericUDAFAverage
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+decl_stmt|;
 annotation|@
 name|Override
 specifier|public
@@ -853,6 +912,11 @@ operator|=
 literal|0
 expr_stmt|;
 block|}
+name|boolean
+name|warned
+init|=
+literal|false
+decl_stmt|;
 annotation|@
 name|Override
 specifier|public
@@ -901,6 +965,8 @@ name|AverageAgg
 operator|)
 name|agg
 decl_stmt|;
+try|try
+block|{
 name|double
 name|v
 init|=
@@ -927,6 +993,58 @@ name|sum
 operator|+=
 name|v
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NumberFormatException
+name|e
+parameter_list|)
+block|{
+if|if
+condition|(
+operator|!
+name|warned
+condition|)
+block|{
+name|warned
+operator|=
+literal|true
+expr_stmt|;
+name|LOG
+operator|.
+name|warn
+argument_list|(
+name|getClass
+argument_list|()
+operator|.
+name|getSimpleName
+argument_list|()
+operator|+
+literal|" "
+operator|+
+name|StringUtils
+operator|.
+name|stringifyException
+argument_list|(
+name|e
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|LOG
+operator|.
+name|warn
+argument_list|(
+name|getClass
+argument_list|()
+operator|.
+name|getSimpleName
+argument_list|()
+operator|+
+literal|" ignoring similar exceptions."
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 block|}
 annotation|@
