@@ -27,6 +27,34 @@ name|org
 operator|.
 name|apache
 operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|Log
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|LogFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|hadoop
 operator|.
 name|hive
@@ -237,6 +265,20 @@ name|LongWritable
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|util
+operator|.
+name|StringUtils
+import|;
+end_import
+
 begin_class
 annotation|@
 name|description
@@ -255,6 +297,23 @@ name|GenericUDAFSum
 implements|implements
 name|GenericUDAFResolver
 block|{
+specifier|static
+specifier|final
+name|Log
+name|LOG
+init|=
+name|LogFactory
+operator|.
+name|getLog
+argument_list|(
+name|GenericUDAFSum
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+decl_stmt|;
 annotation|@
 name|Override
 specifier|public
@@ -543,6 +602,11 @@ operator|=
 literal|0
 expr_stmt|;
 block|}
+name|boolean
+name|warned
+init|=
+literal|false
+decl_stmt|;
 annotation|@
 name|Override
 specifier|public
@@ -568,6 +632,8 @@ operator|==
 literal|1
 operator|)
 assert|;
+try|try
+block|{
 name|merge
 argument_list|(
 name|agg
@@ -578,6 +644,58 @@ literal|0
 index|]
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NumberFormatException
+name|e
+parameter_list|)
+block|{
+if|if
+condition|(
+operator|!
+name|warned
+condition|)
+block|{
+name|warned
+operator|=
+literal|true
+expr_stmt|;
+name|LOG
+operator|.
+name|warn
+argument_list|(
+name|getClass
+argument_list|()
+operator|.
+name|getSimpleName
+argument_list|()
+operator|+
+literal|" "
+operator|+
+name|StringUtils
+operator|.
+name|stringifyException
+argument_list|(
+name|e
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|LOG
+operator|.
+name|warn
+argument_list|(
+name|getClass
+argument_list|()
+operator|.
+name|getSimpleName
+argument_list|()
+operator|+
+literal|" ignoring similar exceptions."
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 annotation|@
 name|Override
@@ -837,6 +955,11 @@ operator|=
 literal|0
 expr_stmt|;
 block|}
+name|boolean
+name|warned
+init|=
+literal|false
+decl_stmt|;
 annotation|@
 name|Override
 specifier|public
@@ -862,6 +985,8 @@ operator|==
 literal|1
 operator|)
 assert|;
+try|try
+block|{
 name|merge
 argument_list|(
 name|agg
@@ -872,6 +997,45 @@ literal|0
 index|]
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NumberFormatException
+name|e
+parameter_list|)
+block|{
+if|if
+condition|(
+operator|!
+name|warned
+condition|)
+block|{
+name|warned
+operator|=
+literal|true
+expr_stmt|;
+name|LOG
+operator|.
+name|warn
+argument_list|(
+name|getClass
+argument_list|()
+operator|.
+name|getSimpleName
+argument_list|()
+operator|+
+literal|" "
+operator|+
+name|StringUtils
+operator|.
+name|stringifyException
+argument_list|(
+name|e
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 annotation|@
 name|Override
@@ -924,12 +1088,6 @@ name|agg
 decl_stmt|;
 name|myagg
 operator|.
-name|empty
-operator|=
-literal|false
-expr_stmt|;
-name|myagg
-operator|.
 name|sum
 operator|+=
 name|PrimitiveObjectInspectorUtils
@@ -940,6 +1098,12 @@ name|partial
 argument_list|,
 name|inputOI
 argument_list|)
+expr_stmt|;
+name|myagg
+operator|.
+name|empty
+operator|=
+literal|false
 expr_stmt|;
 block|}
 block|}
