@@ -1,0 +1,100 @@
+PREHOOK: query: EXPLAIN SELECT
+  sum('a'),
+  avg('a'),
+  variance('a'),
+  std('a')
+FROM src
+PREHOOK: type: QUERY
+POSTHOOK: query: EXPLAIN SELECT
+  sum('a'),
+  avg('a'),
+  variance('a'),
+  std('a')
+FROM src
+POSTHOOK: type: QUERY
+ABSTRACT SYNTAX TREE:
+  (TOK_QUERY (TOK_FROM (TOK_TABREF src)) (TOK_INSERT (TOK_DESTINATION (TOK_DIR TOK_TMP_FILE)) (TOK_SELECT (TOK_SELEXPR (TOK_FUNCTION sum 'a')) (TOK_SELEXPR (TOK_FUNCTION avg 'a')) (TOK_SELEXPR (TOK_FUNCTION variance 'a')) (TOK_SELEXPR (TOK_FUNCTION std 'a')))))
+
+STAGE DEPENDENCIES:
+  Stage-1 is a root stage
+  Stage-0 is a root stage
+
+STAGE PLANS:
+  Stage: Stage-1
+    Map Reduce
+      Alias -> Map Operator Tree:
+        src 
+          TableScan
+            alias: src
+            Select Operator
+              Group By Operator
+                aggregations:
+                      expr: sum('a')
+                      expr: avg('a')
+                      expr: variance('a')
+                      expr: std('a')
+                mode: hash
+                outputColumnNames: _col0, _col1, _col2, _col3
+                Reduce Output Operator
+                  sort order: 
+                  tag: -1
+                  value expressions:
+                        expr: _col0
+                        type: double
+                        expr: _col1
+                        type: struct<count:bigint,sum:double>
+                        expr: _col2
+                        type: struct<count:bigint,sum:double,variance:double>
+                        expr: _col3
+                        type: struct<count:bigint,sum:double,variance:double>
+      Reduce Operator Tree:
+        Group By Operator
+          aggregations:
+                expr: sum(VALUE._col0)
+                expr: avg(VALUE._col1)
+                expr: variance(VALUE._col2)
+                expr: std(VALUE._col3)
+          mode: mergepartial
+          outputColumnNames: _col0, _col1, _col2, _col3
+          Select Operator
+            expressions:
+                  expr: _col0
+                  type: double
+                  expr: _col1
+                  type: double
+                  expr: _col2
+                  type: double
+                  expr: _col3
+                  type: double
+            outputColumnNames: _col0, _col1, _col2, _col3
+            File Output Operator
+              compressed: false
+              GlobalTableId: 0
+              table:
+                  input format: org.apache.hadoop.mapred.TextInputFormat
+                  output format: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
+
+  Stage: Stage-0
+    Fetch Operator
+      limit: -1
+
+
+PREHOOK: query: SELECT
+  sum('a'),
+  avg('a'),
+  variance('a'),
+  std('a')
+FROM src
+PREHOOK: type: QUERY
+PREHOOK: Input: default@src
+PREHOOK: Output: file:/data/users/njain/hive_commit1/hive_commit1/build/ql/tmp/865310068/10000
+POSTHOOK: query: SELECT
+  sum('a'),
+  avg('a'),
+  variance('a'),
+  std('a')
+FROM src
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@src
+POSTHOOK: Output: file:/data/users/njain/hive_commit1/hive_commit1/build/ql/tmp/865310068/10000
+0.0	NULL	NULL	NULL
